--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "youtube-clone-mercadolivre",
+  "name": "startupmapper",
   "version": "0.1.0",
   "private": true,
+  "main": "./src/index.tsx",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
